# rust-remote-shell-example

./: .gitignore  Cargo.toml  TODO.md  flake.nix
client/: Cargo.toml
client/src/: args.rs  crlf.rs  main.rs  writeline.rs
crlf/: Cargo.toml
crlf/src/: lib.rs
server/: Cargo.toml  key.pem
server/src/: args.rs  command.rs  main.rs  writeline.rs
