[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bufstream = "0.1.4"
clap = { version = "4.0.30", features = ["derive"] }
env_logger = "0.10.0"
itertools = "0.10.5"
lazy_static = "1.4.0"
log = "0.4.17"
uuid = { version = "1.2.2", features = ["v4", "fast-rng"] }
crlf = { path = "../crlf" }
native-tls = "0.2.11"
